Changing cmd.Cmd class to specify stdin = sys.stdin and stdout=sys.stdout.

--- a/Inspection_Bot/.project
+++ b/Inspection_Bot/.project
@@ -3,6 +3,7 @@
 	<name>Inspection_Bot</name>
 	<comment></comment>
 	<projects>
+		<project>Printrun</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
